#137 Update karma tests

--- a/webapp/src/app/header/header.component.html
+++ b/webapp/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
   <span>RankMe</span>
   <span class="spacer"></span>
-  <span>{{apiVersion}}</span>
+  <span class="api-version">{{apiVersion}}</span>
 </mat-toolbar>
