--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div id="container">
+  <app-header></app-header>
+  <div id="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
