--- a/webapp/src/app/shared/header/header.component.html
+++ b/webapp/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" id="header-toolbar">
   <span>RankMe</span>
   <span class="spacer"></span>
   <span class="api-version">API {{apiVersion}}</span>
