--- a/webapp/src/app/leagues/dashboard/dashboard.component.html
+++ b/webapp/src/app/leagues/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
 <ng-container [ngSwitch]="isLoading">
   <mat-spinner *ngSwitchCase="true"></mat-spinner>
-  <p *ngSwitchCase="false">{{league | json}}</p>
+  <ng-container *ngSwitchCase="false">
+    <app-player-ranking [players]="league.players"></app-player-ranking>
+  </ng-container>
 </ng-container>
