--- a/webapp/src/app/games/game-list-preview/game-list-preview.component.html
+++ b/webapp/src/app/games/game-list-preview/game-list-preview.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title>Latest games</mat-card-title>
   <mat-card-content>
-    <table mat-table [dataSource]="games" class="width-100p">
+    <table mat-table [dataSource]="dataSource" class="width-100p">
       <ng-container matColumnDef="datetime">
         <th mat-header-cell *matHeaderCellDef>Datetime</th>
         <td mat-cell *matCellDef="let game">
@@ -34,9 +34,12 @@
     </table>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-raised-button>
+    <button mat-raised-button (click)="loadMore()" [disabled]="!pageInfo.hasNextPage">
       <mat-icon>download</mat-icon>
       Load more
     </button>
   </mat-card-actions>
+  <mat-card-footer *ngIf="isLoading">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  </mat-card-footer>
 </mat-card>
