--- a/webapp/src/app/games/game-list-preview/game-list-preview.component.html
+++ b/webapp/src/app/games/game-list-preview/game-list-preview.component.html
@@ -6,7 +6,7 @@
         <th mat-header-cell *matHeaderCellDef>Datetime</th>
         <td mat-cell *matCellDef="let game">
           <p>{{game.dateTime | date : 'EEE, dd-MM' }}</p>
-          <p>{{game.dateTime | date : 'hh:mm' }}</p>
+          <p>{{game.dateTime | date : 'HH:mm' }}</p>
         </td>
       </ng-container>
       <ng-container matColumnDef="player">
