--- a/webapp/src/app/leagues/league-list/league-list.component.html
+++ b/webapp/src/app/leagues/league-list/league-list.component.html
@@ -8,8 +8,11 @@
         </mat-list-option>
       </mat-selection-list>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button [disabled]="!pageInfo?.hasNextPage" (click)="loadMore()">Load more</button>
+    <mat-card-actions align="end">
+      <button mat-raised-button [disabled]="!pageInfo?.hasNextPage" (click)="loadMore()">
+        <mat-icon>download</mat-icon>
+        Load more
+      </button>
     </mat-card-actions>
     <mat-card-footer *ngIf="isLoading">
       <mat-progress-bar mode="indeterminate"></mat-progress-bar>
