--- a/webapp/src/app/games/recently-played-games/recently-played-games.component.html
+++ b/webapp/src/app/games/recently-played-games/recently-played-games.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>Latest games</mat-card-title>
+  <mat-card-title>Recently played games</mat-card-title>
   <mat-card-content>
     <table mat-table [dataSource]="dataSource" class="width-100p">
       <ng-container matColumnDef="datetime">
