#154 Add empty scheduled-games component

--- a/webapp/src/app/leagues/dashboard/dashboard.component.html
+++ b/webapp/src/app/leagues/dashboard/dashboard.component.html
@@ -3,5 +3,6 @@
   <div class="dashboard-container" *ngSwitchCase="false">
     <app-player-ranking [players]="league.players"></app-player-ranking>
     <app-recently-played-games [leagueId]="league.id" [gamesPage]="league.completedGames"></app-recently-played-games>
+    <app-scheduled-games [leagueId]="league.id" [gamesPage]="league.scheduledGames"></app-scheduled-games>
   </div>
 </ng-container>
