#154 Implement scheduled-games component

--- a/webapp/src/app/games/recently-played-games/recently-played-games.component.scss
+++ b/webapp/src/app/games/recently-played-games/recently-played-games.component.scss
@@ -1,4 +1,5 @@
-.mat-cell p {
-  margin: 0;
-  padding: 0;
+.mat-column-players, .mat-column-datetime, .mat-column-score {
+  span {
+    display: block;
+  }
 }
