--- a/webapp/src/app/games/recently-played-games/recently-played-games.component.html
+++ b/webapp/src/app/games/recently-played-games/recently-played-games.component.html
@@ -5,22 +5,22 @@
       <ng-container matColumnDef="datetime">
         <th mat-header-cell *matHeaderCellDef>Datetime</th>
         <td mat-cell *matCellDef="let game">
-          <p>{{game.dateTime | date : 'EEE, dd-MM' }}</p>
-          <p>{{game.dateTime | date : 'HH:mm' }}</p>
+          <span>{{game.dateTime | date : 'EEE, dd-MM'}}</span>
+          <span>{{game.dateTime | date : 'HH:mm'}}</span>
         </td>
       </ng-container>
-      <ng-container matColumnDef="player">
+      <ng-container matColumnDef="players">
         <th mat-header-cell *matHeaderCellDef>Players</th>
         <td mat-cell *matCellDef="let game">
-          <p>{{game.playerOneName}}</p>
-          <p>{{game.playerTwoName}}</p>
+          <span>{{game.playerOneName}}</span>
+          <span>{{game.playerTwoName}}</span>
         </td>
       </ng-container>
       <ng-container matColumnDef="score">
         <th mat-header-cell *matHeaderCellDef>Score</th>
         <td mat-cell *matCellDef="let game">
-          <p>{{game.result.playerOneScore}}</p>
-          <p>{{game.result.playerTwoScore}}</p>
+          <span>{{game.result.playerOneScore}}</span>
+          <span>{{game.result.playerTwoScore}}</span>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
