--- a/webapp/src/app/games/scheduled-games/scheduled-games.component.html
+++ b/webapp/src/app/games/scheduled-games/scheduled-games.component.html
@@ -1,1 +1,35 @@
-<p>scheduled-games works!</p>
+<mat-card>
+  <mat-card-title>Scheduled games</mat-card-title>
+  <mat-card-content>
+    <table mat-table [dataSource]="dataSource" class="width-100p">
+      <ng-container matColumnDef="datetime">
+        <th mat-header-cell *matHeaderCellDef>Datetime</th>
+        <td mat-cell *matCellDef="let game">
+          <span>{{game.dateTime | date : 'EEE, dd-MM'}}</span>
+          <span>{{game.dateTime | date : 'HH:mm'}}</span>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="players">
+        <th mat-header-cell *matHeaderCellDef>Players</th>
+        <td mat-cell *matCellDef="let game">
+          <span>{{game.playerOneName}}</span>
+          <span>{{game.playerTwoName}}</span>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="2">No data</td>
+      </tr>
+    </table>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <button mat-raised-button (click)="loadMore()" [disabled]="!pageInfo.hasNextPage">
+      <mat-icon>download</mat-icon>
+      Load more
+    </button>
+  </mat-card-actions>
+  <mat-card-footer *ngIf="isLoading">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  </mat-card-footer>
+</mat-card>
