--- a/webapp/src/app/games/recently-played-games/recently-played-games.component.html
+++ b/webapp/src/app/games/recently-played-games/recently-played-games.component.html
@@ -38,6 +38,10 @@
       <mat-icon>download</mat-icon>
       Load more
     </button>
+    <button mat-raised-button color="primary" (click)="playGame()">
+      <mat-icon>add</mat-icon>
+      Play game
+    </button>
   </mat-card-actions>
   <mat-card-footer *ngIf="isLoading">
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
