--- a/webapp/src/app/games/play-game/play-game.component.html
+++ b/webapp/src/app/games/play-game/play-game.component.html
@@ -25,7 +25,7 @@
             </td>
             <td>
               <mat-slider
-                [max]="league.maxScore"
+                [max]="league?.maxScore"
                 [min]="0"
                 [step]="1"
                 [thumbLabel]="true"
@@ -51,7 +51,7 @@
             </td>
             <td>
               <mat-slider
-                [max]="league.maxScore"
+                [max]="league?.maxScore"
                 [min]="0"
                 [step]="1"
                 [thumbLabel]="true"
