#158 Reload completed games list when new game is played

--- a/webapp/src/app/games/play-game/play-game.component.html
+++ b/webapp/src/app/games/play-game/play-game.component.html
@@ -64,7 +64,7 @@
         </table>
       </mat-dialog-content>
       <mat-dialog-actions align="end">
-        <button mat-raised-button [mat-dialog-close]="false">
+        <button mat-raised-button [mat-dialog-close]="null">
           <mat-icon>close</mat-icon>
           Cancel
         </button>
