--- a/webapp/src/app/leagues/league-list/league-list.component.html
+++ b/webapp/src/app/leagues/league-list/league-list.component.html
@@ -9,9 +9,11 @@
       </mat-selection-list>
     </mat-card-content>
     <mat-card-actions align="end">
-      <button mat-raised-button [disabled]="!pageInfo?.hasNextPage" (click)="loadMore()">
-        <mat-icon>download</mat-icon>
-        Load more
+      <button mat-icon-button matTooltip="Previous page" [disabled]="!pageInfo?.hasPreviousPage" (click)="loadPreviousPage()">
+        <mat-icon>navigate_before</mat-icon>
+      </button>
+      <button mat-icon-button matTooltip="Next page" [disabled]="!pageInfo?.hasNextPage" (click)="loadNextPage()">
+        <mat-icon>navigate_next</mat-icon>
       </button>
     </mat-card-actions>
     <mat-card-footer *ngIf="isLoading">
