#177 Add previous/next page buttons to recenty-played-games component

--- a/webapp/src/app/games/recently-played-games/recently-played-games.component.html
+++ b/webapp/src/app/games/recently-played-games/recently-played-games.component.html
@@ -34,9 +34,11 @@
     </table>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-raised-button (click)="loadMore()" [disabled]="!pageInfo.hasNextPage">
-      <mat-icon>download</mat-icon>
-      Load more
+    <button mat-raised-button matTooltip="Previous page" [disabled]="!pageInfo?.hasPreviousPage" (click)="loadPreviousPage()">
+      <mat-icon>navigate_before</mat-icon>
+    </button>
+    <button mat-raised-button matTooltip="Next page" [disabled]="!pageInfo?.hasNextPage" (click)="loadNextPage()">
+      <mat-icon>navigate_next</mat-icon>
     </button>
     <button mat-raised-button color="primary" (click)="playGame()">
       <mat-icon>add</mat-icon>
