--- a/webapp/src/app/app.component.scss
+++ b/webapp/src/app/app.component.scss
@@ -1,18 +1,3 @@
-#container {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-#sidenav-container {
-  flex: 1;
-  margin-top: 64px;
-}
-
-#content {
-  margin: 2em;
+#app-content {
+  padding-top: 64px;
 }
