#179 Implement create-league component

--- a/webapp/src/app/games/play-game/play-game.component.html
+++ b/webapp/src/app/games/play-game/play-game.component.html
@@ -1,7 +1,10 @@
 <ng-container [ngSwitch]="isLoading">
   <mat-spinner *ngSwitchCase="true"></mat-spinner>
   <ng-container *ngSwitchCase="false">
-    <h1 mat-dialog-title>Play game</h1>
+    <h1 mat-dialog-title>
+      <mat-icon>play_circle_outline</mat-icon>
+      Play game
+    </h1>
     <form [formGroup]="playGameForm" (ngSubmit)="playGame()">
       <mat-dialog-content>
         <ng-container *ngIf="isPlayersValid()">
