--- a/webapp/src/app/games/recently-played-games/recently-played-games.component.html
+++ b/webapp/src/app/games/recently-played-games/recently-played-games.component.html
@@ -41,7 +41,7 @@
       <mat-icon>navigate_next</mat-icon>
     </button>
     <button mat-raised-button color="primary" (click)="playGame()">
-      <mat-icon>add</mat-icon>
+      <mat-icon>play_circle_outline</mat-icon>
       Play game
     </button>
   </mat-card-actions>
