--- a/webapp/src/app/leagues/league.component.html
+++ b/webapp/src/app/leagues/league.component.html
@@ -4,11 +4,15 @@
       <mat-nav-list>
         <a mat-list-item (click)="createLeague()">
           <mat-icon>playlist_add</mat-icon>
-          Create league
+          &nbsp;Create league
         </a>
         <a mat-list-item routerLink="/leagues">
           <mat-icon>swap_vert</mat-icon>
-          Switch league
+          &nbsp;Switch league
+        </a>
+        <a mat-list-item [routerLink]="['/leagues/', leagueId, 'players']">
+          <mat-icon>people</mat-icon>
+          &nbsp;Players
         </a>
       </mat-nav-list>
     </mat-sidenav>
