--- a/webapp/src/app/leagues/league.component.html
+++ b/webapp/src/app/leagues/league.component.html
@@ -2,6 +2,10 @@
   <mat-sidenav-container id="sidenav-container">
     <mat-sidenav [mode]="'side'" [opened]="true">
       <mat-nav-list>
+        <a mat-list-item [routerLink]="['/leagues', leagueId]">
+          <mat-icon>dashboard</mat-icon>
+          &nbsp;Dashboard
+        </a>
         <a mat-list-item (click)="createLeague()">
           <mat-icon>playlist_add</mat-icon>
           &nbsp;Create league
@@ -10,7 +14,7 @@
           <mat-icon>swap_vert</mat-icon>
           &nbsp;Switch league
         </a>
-        <a mat-list-item [routerLink]="['/leagues/', leagueId, 'players']">
+        <a mat-list-item [routerLink]="['/leagues', leagueId, 'players']">
           <mat-icon>people</mat-icon>
           &nbsp;Players
         </a>
