#182 Player-list component (#184)
* #182 Bump up version
* #182 Add players GraphQL query
* #182 Add e2e tests for players query
* #182 Increase subscription test timeout
* #182 Reduce gap between components
* #182 Add empty player-list component
* #182 Add player service
* #182 Setup random port for api-service integration tests
* #182 Implement player-list component
* #182 Update karma tests

--- a/webapp/src/app/leagues/league.component.html
+++ b/webapp/src/app/leagues/league.component.html
@@ -2,13 +2,21 @@
   <mat-sidenav-container id="sidenav-container">
     <mat-sidenav [mode]="'side'" [opened]="true">
       <mat-nav-list>
+        <a mat-list-item [routerLink]="['/leagues', leagueId]">
+          <mat-icon>dashboard</mat-icon>
+          &nbsp;Dashboard
+        </a>
         <a mat-list-item (click)="createLeague()">
           <mat-icon>playlist_add</mat-icon>
-          Create league
+          &nbsp;Create league
         </a>
         <a mat-list-item routerLink="/leagues">
           <mat-icon>swap_vert</mat-icon>
-          Switch league
+          &nbsp;Switch league
+        </a>
+        <a mat-list-item [routerLink]="['/leagues', leagueId, 'players']">
+          <mat-icon>people</mat-icon>
+          &nbsp;Players
         </a>
       </mat-nav-list>
     </mat-sidenav>
