#176 rename 'open dialog' methods

--- a/webapp/src/app/games/recently-played-games/recently-played-games.component.html
+++ b/webapp/src/app/games/recently-played-games/recently-played-games.component.html
@@ -40,7 +40,7 @@
     <button mat-raised-button matTooltip="Next page" [disabled]="!pageInfo?.hasNextPage" (click)="loadNextPage()">
       <mat-icon>navigate_next</mat-icon>
     </button>
-    <button mat-raised-button color="primary" (click)="playGame()">
+    <button mat-raised-button color="primary" (click)="openPlayGameDialog()">
       <mat-icon>play_circle_outline</mat-icon>
       Play game
     </button>
