--- a/webapp/src/app/leagues/league.component.html
+++ b/webapp/src/app/leagues/league.component.html
@@ -6,7 +6,7 @@
           <mat-icon>dashboard</mat-icon>
           &nbsp;Dashboard
         </a>
-        <a mat-list-item (click)="createLeague()">
+        <a mat-list-item (click)="openCreateLeagueDialog()">
           <mat-icon>playlist_add</mat-icon>
           &nbsp;Create league
         </a>
