#176 Open Add player dialog

--- a/webapp/src/app/players/player-list/player-list.component.html
+++ b/webapp/src/app/players/player-list/player-list.component.html
@@ -26,5 +26,11 @@
         </tr>
       </table>
     </mat-card-content>
+    <mat-card-actions align="end">
+      <button mat-raised-button color="primary" (click)="openAddPlayerDialog()">
+        <mat-icon>person_add</mat-icon>
+        Add player
+      </button>
+    </mat-card-actions>
   </mat-card>
 </ng-container>
