--- a/webapp/src/app/players/add-player/add-player.component.html
+++ b/webapp/src/app/players/add-player/add-player.component.html
@@ -2,22 +2,22 @@
   <mat-icon>person_add</mat-icon>
   Add player
 </h1>
-<!--<form [formGroup]="createLeagueForm" (ngSubmit)="createLeague()">-->
-<!--  <mat-dialog-content>-->
-<!--    <mat-form-field>-->
-<!--      <mat-label>Name</mat-label>-->
-<!--      <input type="text" matInput formControlName="name">-->
-<!--      <mat-error *ngIf="createLeagueForm.controls.name.invalid">Please provide league name</mat-error>-->
-<!--    </mat-form-field>-->
-<!--  </mat-dialog-content>-->
-<!--  <mat-dialog-actions align="end">-->
-<!--    <button mat-raised-button [mat-dialog-close]="null">-->
-<!--      <mat-icon>close</mat-icon>-->
-<!--      Cancel-->
-<!--    </button>-->
-<!--    <button type="submit" mat-raised-button color="primary" [disabled]="createLeagueForm.invalid">-->
-<!--      <mat-icon>check</mat-icon>-->
-<!--      Add-->
-<!--    </button>-->
-<!--  </mat-dialog-actions>-->
-<!--</form>-->
+<form [formGroup]="addPlayerForm" (ngSubmit)="addPlayer()">
+  <mat-dialog-content>
+    <mat-form-field>
+      <mat-label>Name</mat-label>
+      <input type="text" matInput formControlName="name">
+      <mat-error *ngIf="addPlayerForm.controls.name.invalid">Please provide player name</mat-error>
+    </mat-form-field>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-raised-button [mat-dialog-close]="null">
+      <mat-icon>close</mat-icon>
+      Cancel
+    </button>
+    <button type="submit" mat-raised-button color="primary" [disabled]="addPlayerForm.invalid">
+      <mat-icon>check</mat-icon>
+      Add
+    </button>
+  </mat-dialog-actions>
+</form>
