#190 Fix NG8107 warning

--- a/webapp/src/app/games/play-game/play-game.component.html
+++ b/webapp/src/app/games/play-game/play-game.component.html
@@ -28,7 +28,7 @@
             </td>
             <td>
               <mat-slider
-                [max]="league?.maxScore"
+                [max]="league.maxScore"
                 [min]="0"
                 [step]="1"
                 [thumbLabel]="true"
@@ -54,7 +54,7 @@
             </td>
             <td>
               <mat-slider
-                [max]="league?.maxScore"
+                [max]="league.maxScore"
                 [min]="0"
                 [step]="1"
                 [thumbLabel]="true"
