--- a/webapp/src/app/players/player-list/player-list.component.html
+++ b/webapp/src/app/players/player-list/player-list.component.html
@@ -6,7 +6,7 @@
       Players
     </mat-card-title>
     <mat-card-content>
-      <table mat-table [dataSource]="players" class="width-100p">
+      <table mat-table [dataSource]="dataSource" class="width-100p">
         <ng-container matColumnDef="username">
           <th mat-header-cell *matHeaderCellDef>Username</th>
           <td mat-cell *matCellDef="let player">{{player.name}}</td>
